examples/datalog/10_edge_cases/53_same_relation_twice.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_same_twice
Knowledge graph 'test_same_twice' created.
Switched to knowledge graph: test_same_twice
> .kg use test_same_twice
Switched to knowledge graph: test_same_twice
> +nums[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'nums'.
> pairs(A, B) :- nums(A), nums(B), A < B.
3 rows:
  (1, 2)
  (1, 3)
  (2, 3)
(session: 1 rule(s))
> ?- pairs(A, B).
3 rows:
  (1, 2)
  (1, 3)
  (2, 3)
> +pair_count(<COUNT:A>) :- pairs(A, _).
Script error: Parse error: Invalid term: '<COUNT:A>'
